Fix thunar double border

--- a/Zukitre/gtk-3.0/_other.scss
+++ b/Zukitre/gtk-3.0/_other.scss
@@ -222,6 +222,9 @@ window.background.chromium {
 .thunar {
   .standard-view { border-width: 0; }
   toolbar { border-bottom: 1px solid $borders_color; }
+
+  // https://github.com/lassekongo83/plano-theme/issues/37
+  .shortcuts-pane { border-top: 0; }
 }
 
 // Nemo
